# test_app

./: CMakeLists.txt  EditPage.qml  LoginPage.qml  Projects.qml  README.md  RoundImage.qml  Switcher.qml  main.qml  qml.qrc
headers/: controller.h  project.h  projectmodel.h  projectroleenum.h
src/: controller.cpp  main.cpp  project.cpp  projectmodel.cpp
